Added mask generation algorithm.

--- a/ImageConverter/ImageConverter/ImageConverter.csproj
+++ b/ImageConverter/ImageConverter/ImageConverter.csproj
@@ -85,6 +85,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleIntersection.cs" />
     <Compile Include="WidthHeidthRatioCalc.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
