--- a/ImageConverter/ImageConverter/ImageConverter.csproj
+++ b/ImageConverter/ImageConverter/ImageConverter.csproj
@@ -72,11 +72,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CsvFileConverter.cs" />
+    <Compile Include="TxtFileConverter.cs" />
     <Compile Include="ImageMaskCreator.cs" />
     <Compile Include="Imaging\IImageArray.cs" />
     <Compile Include="Imaging\RgbImageArray.cs" />
     <Compile Include="Imaging\ImageResizer.cs" />
+    <Compile Include="IConverter.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +88,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleIntersection.cs" />
     <Compile Include="WidthHeidthRatioCalc.cs" />
+    <Compile Include="XmlFileConverter.cs" />
+    <Compile Include="XmlMarkupExporter.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
